<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/autostart_about"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/autostart_message"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black_light" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/bluedarker"
        android:gravity="center"
        android:text="@string/ok"/>

</LinearLayout>