<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingTop="30dp"
        android:src="@drawable/applock"
        android:background="@color/blue_normal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_horizontal"
        android:textColor="#ffffff"
        android:text="@string/permission_control"
        android:textSize="@dimen/rgk_text_size_medium"
        android:background="@color/blue_normal"/>

    <LinearLayout
        android:id="@+id/ll_auto_launch"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/rgk_text_size_medium"
            android:text="@string/whitelist"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black_light" />

    <LinearLayout
        android:id="@+id/ll_app_permission"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/rgk_text_size_medium"
            android:text="@string/app_permission"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black_light" />


</LinearLayout>