<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/rgk_text_size_small"
            android:paddingLeft="@dimen/rgk_text_padding"
            android:gravity="center_vertical"
            android:text="@string/uninstall_app"/>

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/rgk_text_size_small"
            android:paddingRight="@dimen/rgk_text_padding"
            android:gravity="center_vertical|right"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/rgk_text_padding"
        android:paddingRight="@dimen/rgk_text_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <ImageView
                android:id="@+id/iv_uninstall"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_unintall_app" />

            <TextView
                android:id="@+id/tv_uninstall_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/iv_uninstall"
                android:paddingLeft="@dimen/rgk_text_padding"
                android:text="@string/uninstall_app"
                android:textSize="@dimen/rgk_text_size_medium" />


            <TextView
                android:id="@+id/tv_uninstall_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_uninstall_title"
                android:layout_toRightOf="@id/iv_uninstall"
                android:ellipsize="marquee"
                android:paddingLeft="@dimen/rgk_text_padding"
                android:singleLine="true"
                android:text="@string/uninstall_app_hint"
                android:textColor="#80000000"
                android:textSize="@dimen/rgk_text_size_small" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black_light" />

        <TextView
            android:id="@+id/tv_uninstall_app_go"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/uninstall_app_go"
            android:textColor="@color/bluedarker"
            android:textSize="@dimen/rgk_text_size_small" />

    </LinearLayout>



</LinearLayout>